--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
     "npm": "^8.6.0",
+    "password-validator": "^5.2.1",
     "path": "^0.12.7"
   }
 }
