--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-static": "^1.2.6",
+    "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
     "mongoose-errors": "^1.1.2",
